// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Normal User input > user journey: Entering "9 x 5.2", 2x click "=" button, x 34 = 1`] = `
{
  "changeOnReadyOrError": 0,
  "commandLine": [
    {
      "payload": "9",
      "type": "digit",
    },
    {
      "type": "multiply",
    },
    {
      "payload": "5",
      "type": "digit",
    },
    {
      "payload": ".",
      "type": "digit",
    },
    {
      "payload": "2",
      "type": "digit",
    },
  ],
  "history": [],
  "inTransit": false,
  "serverError": {
    "error": undefined,
  },
  "tainted": true,
}
`;

exports[`Normal User input > user journey: Entering "9 x 5.2", 2x click "=" button, x 34 = 2`] = `
{
  "changeOnReadyOrError": 1,
  "commandLine": [
    {
      "payload": 46.800000000000004,
      "type": "value",
    },
  ],
  "history": [
    {
      "keyedInExpression": [
        {
          "payload": "9",
          "type": "digit",
        },
        {
          "type": "multiply",
        },
        {
          "payload": "5",
          "type": "digit",
        },
        {
          "payload": ".",
          "type": "digit",
        },
        {
          "payload": "2",
          "type": "digit",
        },
      ],
      "result": {
        "payload": 46.800000000000004,
        "type": "value",
      },
    },
  ],
  "inTransit": false,
  "serverError": {},
  "tainted": false,
}
`;

exports[`Normal User input > user journey: Entering "9 x 5.2", 2x click "=" button, x 34 = 3`] = `
{
  "changeOnReadyOrError": 2,
  "commandLine": [
    {
      "payload": 46.800000000000004,
      "type": "value",
    },
    {
      "type": "divide",
    },
    {
      "payload": ".",
      "type": "digit",
    },
    {
      "payload": "6",
      "type": "digit",
    },
  ],
  "history": [
    {
      "keyedInExpression": [
        {
          "payload": "9",
          "type": "digit",
        },
        {
          "type": "multiply",
        },
        {
          "payload": "5",
          "type": "digit",
        },
        {
          "payload": ".",
          "type": "digit",
        },
        {
          "payload": "2",
          "type": "digit",
        },
      ],
      "result": {
        "payload": 46.800000000000004,
        "type": "value",
      },
    },
  ],
  "inTransit": false,
  "serverError": {},
  "tainted": true,
}
`;
